# dftbephy

./: .gitignore  Input_for_DFTBephy.md  LICENSE.txt  README.md  pyproject.toml  references.bib  requirements.txt  setup.py
.github/workflows/: documentation.yml
dftbephy/: __init__.py  analysis.py  analytical.py  atomic.py  calc.py  dftb.py  dftbephy-cli.py  dftbephy_cli.py  epc.py  extensions.pyx  fileio.py  fourier.py  tools.py  units.py
dftbephy/pytests/: test_FD.py  test_analytical.py  test_extensions.py
examples/Graphene/: README.md  dftbephy_in.hsd
examples/Graphene/el-ph/: dftb_in.hsd
examples/Graphene/opt/: dftb_in.hsd  graphene.gen
examples/Graphene/phonons/: FORCE_SETS  dftb_in.hsd  make_dirs.sh  phonopy_disp.yaml
notebooks/: Graphene-BT2.ipynb  Graphene-Bands.ipynb  Graphene-EPC.ipynb  Graphene-LWS.ipynb  Graphene-Mobility.ipynb  Graphene-RelaxationTimes.ipynb
scripts/: cmpjson.py  dftbephy-bands.py  dftbephy-epc.py  dftbephy-ephline.py  dftbephy-init.py  dftbephy-mobility-mpi.py  dftbephy-mpi.py  dftbephy-relaxationtimes-mpi.py  graphene-bands.py  graphene-epc.py  graphene-ephline.py  graphene-lws.py  graphene-mobility-bt2.py  graphene-mobility.py  graphene-relaxationtimes-fine.py
wiki/docs/: _config.yml  _toc.yml  literature.bib
wiki/docs/_static/: custom.css
wiki/docs/documentation/: changelog.md  index.md  inputfile.md  publications.md  sourcecode.md
wiki/docs/examples/band_nonparabolicity/: index.md
wiki/docs/examples/graphene-nonSCC/: index.md
wiki/docs/main/: about.md  dftbephy_usage.md  installation.md
(+5 files in other folders)
