[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "dftbephy"
version = "0.0.1"
authors = [{name="Alexander Croy", email="alexander.croy@uni-jena.de"}]
description = "Calculating electron-phonon couplings (EPCs) with DFTB."
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "phonopy",
    "ase",
    "spglib",
    "h5py"
]

[project.urls]
"Homepage" = "https://github.com/CoMeT4MatSci/dftbephy"
"Bug Tracker" = "https://github.com/CoMeT4MatSci/dftbephy/issues"

[tool.setuptools.packages.find]
where = ["dftbephy", "."]  
