[build-system]
requires = ["setuptools", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "dftbephy"
version = "0.2.0"
authors = [{name="Alexander Croy", email="alexander.croy@uni-jena.de"}]
description = "Calculating electron-phonon couplings (EPCs) with DFTB."
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "phonopy>=3.0.0",
    "spglib<2.7",
    "h5py"
]

[project.scripts]
dftbephy = "dftbephy.dftbephy_cli:main"

[project.urls]
"Homepage" = "https://github.com/CoMeT4MatSci/dftbephy"
"Bug Tracker" = "https://github.com/CoMeT4MatSci/dftbephy/issues"

[tool.setuptools.packages.find]
where = ["dftbephy", "."]  
